apps/strikers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strikers
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
