apps/strikers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strikers
  namespace: strikers
spec:
  selector:
    app.kubernetes.io/name: strikers
  ports:
    - name: http
      port: 7878
      targetPort: http
