apps/strikers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strikers
  namespace: strikers
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: f4f59044-cc55-41f0-a76a-96fdfeb42dc9.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
    - host: strikers.jensvanzutphen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strikers
                port:
                  number: 7878
  tls:
    - hosts:
        - strikers.jensvanzutphen.com
      secretName: strikers-tls
